--- a/src/blocks/b-review-image/b-review-image.less
+++ b/src/blocks/b-review-image/b-review-image.less
@@ -2,15 +2,19 @@
 @import "mixins";
 
 .b-review-image {
-	background: left top repeat url("../../assets/img/reviews-list-type-mail-pattern.png");
-	padding: 55px 71px 38px 90px;
-	width: 900px;
-	height: 1040px;
+	//background: left top repeat url("../../assets/img/reviews-list-type-mail-pattern.png");
+	//padding: 55px 71px 38px 90px;
+	//width: 900px;
+	//height: 1040px;
 }
 
 .b-review-image__container {
 	background: left top no-repeat url("../../assets/img/review-image-bg.png");
-	width: 741px;
-	height: 944px;
-	padding: 67px 83px 84px 66px;
+	width: 765px;
+	height: 998px;
+	background-size: 765px 998px;
+	//width: 741px;
+	//height: 944px;
+	padding: 97px 159px 169px 88px;
+	//padding: 67px 83px 84px 66px;
 }
