--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -16,7 +16,7 @@
 
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
+@brand-info:            #008fcb;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
@@ -28,7 +28,7 @@
 //** Background color for `<body>`.
 @body-bg:               #fff;
 //** Global text color on `<body>`.
-@text-color:            #252525;
+@text-color:            #9ba1b6;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
@@ -42,7 +42,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-primary:     "Textbook New Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-primary:     "webfontregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
@@ -70,7 +70,7 @@
 @headings-font-family:    inherit;
 @headings-font-weight:    bold;
 @headings-line-height:    1.1;
-@headings-color:          inherit;
+@headings-color:          #4c5370; //inherit;
 
 
 //== Iconography
