--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -5,6 +5,8 @@ block content
         .container
             h1.b-page__title Клиенты
 
+            p.b-page__lead Самые лучшие люди и компании. Будем рады вас видеть в этом списке.
+
         .b-clients
             .container-fluid
                 .b-clients__list
@@ -39,4 +41,4 @@ block content
                                 img.b-clients__image(src='assets/img/tmp/client_2_on.png')
                 .g-loader.g-loader_theme_dark
                     .g-loader__content
-                        a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
+                        a.g-loader__button(href='#') #[span.g-loader__button-text Загрузить ещё]
