--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -68,9 +68,9 @@ block content
                     $(this).data('hold', Math.floor(Math.random() * 400) + 50);
                 });
 
-            .g-loader
+            .g-loader.g-loader_without-gradient
                 .g-loader__content
-                    a.btn.btn-info.btn-lg.g-loader__link(href='portfolio_type_1.html') Посмотреть все 985 работ
+                    a.btn.btn-info.g-loader__link(href='portfolio_type_1.html') Посмотреть все 985 работ
 
                     p.g-loader__text Запаситесь чашечкой чая или кофе — для просмотра всех работ потребуется больше 50 минут.
         .b-treatment.g-mt20
@@ -201,7 +201,7 @@ block content
                         .b-review.b-review_video
                             a.b-review__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
                     .b-reviews__footer
-                        span.b-reviews__date 22 июня 2016
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_mail
                     .b-reviews__header
@@ -211,7 +211,7 @@ block content
                         .b-review.b-review_image
                             a.b-review__link(href='#review_1'): img.img-responsive(src='http://placehold.it/196x264')
                     .b-reviews__footer
-                        span.b-reviews__date 5 февраля 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_social
                     .b-reviews__header
@@ -221,7 +221,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_social
                     .b-reviews__header
@@ -231,7 +231,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_social
                     .b-reviews__header
@@ -241,7 +241,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_social
                     .b-reviews__header
@@ -251,7 +251,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_social
                     .b-reviews__header
@@ -261,7 +261,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_fl
                     .b-reviews__header
@@ -270,7 +270,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Задание было выполнено! Качество радует! Рекомендую!
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_forums
                     .b-reviews__header
@@ -280,7 +280,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.b-reviews__item_type_forums
                     .b-reviews__header
@@ -290,11 +290,11 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
-            .g-loader.g-loader_theme_dark
+            .g-loader.g-loader_theme_dark.g-loader_without-gradient
                 .g-loader__content
-                    a.btn.btn-info.btn-lg.g-loader__link(href='reviews.html') Посмотреть все 232 отзыва
+                    a.btn.btn-info.g-loader__link(href='reviews.html') Посмотреть все 232 отзыва
         .b-blog.g-mb50
             h2.b-blog__header Справочник клиента
 
@@ -336,9 +336,9 @@ block content
                                 span 16 марта 2015
                             .col-xs-6.text-right
                                 span 16 марта 2015
-        .g-loader
+        .g-loader.g-loader_without-gradient
             .g-loader__content
-                a.btn.btn-success.btn-lg.g-loader__link(href='blog.html') Почитать все 15 статей
+                a.btn.btn-success.g-loader__link(href='blog.html') Почитать все 15 статей
         .hidden
             #review_1
                 .b-review-image
