--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -3,7 +3,7 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
-            h1.b-page__title Отзывы клиентов
+            h1.b-page__title 180 отзывов от клиентов
 
             .b-reviews
                 .b-reviews-filter.b-reviews__filter
@@ -14,13 +14,13 @@ block content
                         span.b-reviews-filter__title Видеоотзывы
                         span.b-reviews-filter__count 422
                     a.b-reviews-filter__item.b-reviews-filter__item_type_mail(href='#')
-                        span.b-reviews-filter__title Рекомендательные письма
+                        span.b-reviews-filter__title Рекомендации
                         span.b-reviews-filter__count 191
                     a.b-reviews-filter__item.b-reviews-filter__item_type_social(href='#')
-                        span.b-reviews-filter__title Социальные сети
+                        span.b-reviews-filter__title Соцсети
                         span.b-reviews-filter__count 128
                     a.b-reviews-filter__item.b-reviews-filter__item_type_fl(href='#')
-                        span.b-reviews-filter__title Fl.ru
+                        span.b-reviews-filter__title FL
                         span.b-reviews-filter__count 266
                     a.b-reviews-filter__item.b-reviews-filter__item_type_forums(href='#')
                         span.b-reviews-filter__title Форумы
@@ -36,7 +36,7 @@ block content
                         .b-review.b-review_video
                             a.b-review__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
                     .b-reviews__footer
-                        span.b-reviews__date 22 июня 2016
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_mail(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -46,7 +46,7 @@ block content
                         .b-review.b-review_image
                             a.b-review__link(href='#review_1', data-url="http://placehold.it/196x264"): img.img-responsive(src='http://placehold.it/196x264')
                     .b-reviews__footer
-                        span.b-reviews__date 5 февраля 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -56,7 +56,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -66,7 +66,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -76,7 +76,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -86,7 +86,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -96,7 +96,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_fl(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -105,7 +105,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Задание было выполнено! Качество радует! Рекомендую!
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -115,7 +115,7 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
                 .b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true")
                     .b-reviews__header
@@ -125,17 +125,17 @@ block content
                     .b-reviews__content.b-reviews__content_type_text
                         p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                     .b-reviews__footer
-                        span.b-reviews__date 11 января 2015
+                        span.b-reviews__date 22.06.2016
                         a.b-reviews__link(href='#') Оригинал отзыва
             script.
                 $('.b-reviews__item').each(function(){
                     $(this).data('hold', Math.floor(Math.random() * 450) + 50);
                 });
-            .g-loader
+            .g-loader.g-loader_theme_dark
                 .g-loader__content
                     a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
         .hidden
             #review_1
                 .b-review-image
                     .b-review-image__container
-                        img(src="http://placehold.it/592x793", alt="")
+                        img(src="http://placehold.it/519x731", alt="")
