--- a/src/blocks/b-clients/b-clients.less
+++ b/src/blocks/b-clients/b-clients.less
@@ -2,7 +2,7 @@
 @import "mixins";
 
 .b-clients {
-	background: #f5f9fc;
+	background: #f5f6fa;
 	margin-top: 20px;
 	padding-bottom: 40px;
 
@@ -12,7 +12,7 @@
 }
 
 .b-clients__list {
-	padding: 40px 20px 0;
+	padding: 85px 20px 0;
 
 	display: flex;
 	flex-flow: row wrap;
@@ -21,7 +21,8 @@
 
 .b-clients__item {
 	background: #ffffff;
-	box-shadow: 2px 2px 0 rgba(0, 0, 0, .05);
+	border-radius: 10px;
+	box-shadow: 0 8px 48px rgba(76, 83, 112, .1);
 	margin: 20px;
 	min-width: 200px;
 	overflow: hidden;
@@ -40,7 +41,7 @@
 		flex-basis: 200px;
 	}
 
-	padding: 20px 0 16px;
+	padding: 22px 0 30px;
 
 	text-align: center;
 	color: @text-color;
@@ -50,7 +51,8 @@
 		color: #1abc9c;
 
 		.b-clients__title {
-			border-bottom-color: #1abc9c;
+			color: #4c5370;
+			border-bottom-color: #d9dbe6;
 		}
 
 		.b-clients__image {
@@ -72,9 +74,11 @@
 }
 
 .b-clients__title {
+	color: #9ba1b6;
 	font-size: 24px;
+	line-height: 34px;
 	font-weight: bold;
-	border-bottom: 2px solid rgba(37, 37, 37, .05);
+	border-bottom: 2px solid #f5f6fa;
 	display: inline-block;
 	white-space: nowrap;
 	overflow: hidden;
@@ -82,7 +86,7 @@
 }
 
 .b-clients__content {
-	height: 40px;
+	height: 50px;
 	margin-top: 26px;
 	display: flex;
 	justify-content: center;
@@ -90,7 +94,7 @@
 }
 
 .b-clients__image {
-	max-height: 40px !important;
+	max-height: 50px !important;
 	max-width: 150px !important;
 }
 
