--- a/src/less/common.less
+++ b/src/less/common.less
@@ -27,8 +27,8 @@ body {
 	//min-width: 1080px;
 	//position: relative;
 
-	font-weight: 300;
-	letter-spacing: -0.015em;
+	//font-weight: 300;
+	//letter-spacing: -0.015em;
 }
 
 /* Non-responsive overrides
@@ -243,11 +243,14 @@ body {
 }
 
 .fancybox-overlay {
-	background: rgba(0, 0, 0, .8);
+	background: fade(#4c5370, 70%);
+	//background: fade(#4c5370, 80%);
 
-	@media (min-width: @grid-float-breakpoint) {
-		background: rgba(0, 0, 0, .65);
-	}
+	//background: rgba(0, 0, 0, .8);
+	//
+	//@media (min-width: @grid-float-breakpoint) {
+	//	background: rgba(0, 0, 0, .65);
+	//}
 }
 
 .fancybox-close {
@@ -261,7 +264,11 @@ body {
 	transition: all .1s ease-out;
 
 	@media (min-width: @screen-md-min) {
-		right: 0;
+		position: fixed;
+		right: 50px;
+		top: 30px;
+
+		//right: 0;
 	}
 
 	@media (min-width: @grid-float-breakpoint) {
@@ -277,7 +284,8 @@ body {
 	color: @text-color;
 	border-radius: 0;
 	box-shadow: none !important;
-	background: #fff;
+	background-color: transparent;
+	//background: #fff;
 	margin-bottom: 50px;
 }
 
@@ -288,39 +296,50 @@ body {
 	}
 
 	span {
+		//110x68
 		visibility: visible;
-		background: none !important;
-		color: #fff;
-		opacity: .3;
-		margin-top: -13px;
-		top: 353px;
+		//background: none !important;
+		//color: #fff;
+		opacity: .5;
+		margin-top: -17px;
+		top: 355px;
 
-		width: 26px;
-		height: 26px;
+		width: 55px;
+		height: 34px;
+
+		transition: opacity .2s;
 	}
 }
 
 .fancybox-prev {
-	left: -100px;
-	width: 100px;
+	left: -150px;
+	width: 150px;
 
 	span {
 		left: 50px;
-		border-left: solid 6px currentColor;
-		border-top: solid 6px currentColor;
-		transform: rotate(-45deg);
+		background: left top no-repeat url("../img/slider-arrow.png");
+		background-size: 55px 34px;
+
+		//border-left: solid 6px currentColor;
+		//border-top: solid 6px currentColor;
+		//transform: rotate(-45deg);
 	}
 }
 
 .fancybox-next {
-	right: -100px;
-	width: 100px;
+	right: -150px;
+	width: 150px;
 
 	span {
 		right: 50px;
-		border-right: solid 6px currentColor;
-		border-bottom: solid 6px currentColor;
-		transform: rotate(-45deg);
+		background: left top no-repeat url("../img/slider-arrow.png");
+		background-size: 55px 34px;
+
+		transform: rotate(180deg);
+
+		//border-right: solid 6px currentColor;
+		//border-bottom: solid 6px currentColor;
+		//transform: rotate(-45deg);
 	}
 }
 
