--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -26,18 +26,19 @@
 }
 
 .my-heading-h1() {
-	font-size: 30px;
+	font-size: 47px;
 
 	@media (min-width: @screen-md-min) {
-		font-size: 36px;
+		font-size: 58px;
 	}
 
 	@media (min-width: @grid-float-breakpoint) {
-		font-size: 40px;
+		font-size: 64px;
 	}
 }
 
 .my-heading-lead() {
+	color: #9ba1b6;
 	font-size: 20px;
 
 	@media (min-width: @screen-md-min) {
@@ -45,7 +46,7 @@
 	}
 
 	@media (min-width: @grid-float-breakpoint) {
-		font-size: 30px;
+		font-size: 26px;
 	}
 }
 
@@ -70,5 +71,16 @@
 
 	@media (min-width: @grid-float-breakpoint) {
 		font-size: 20px;
+	}
+}
+
+.my-default-link() {
+	color: #9ba1b6;
+	border-bottom: 2px solid #f5f6fa;
+
+	&:hover, &:active, &:focus {
+		text-decoration: none;
+		color: #4c5370;
+		border-bottom-color: #d9dbe6;
 	}
 }
