--- a/src/templates/portfolio_type_1.jade
+++ b/src/templates/portfolio_type_1.jade
@@ -19,7 +19,6 @@ block content
                     a.b-portfolio-filter__item.b-portfolio-filter__item_type_jpg(href='#')
                         span.b-portfolio-filter__title JPG
                         span.b-portfolio-filter__count 266
-        h1.b-page__title В портфолио 985 баннеров
 
         .b-filter
             a.b-filter__item.b-filter__item_active(href='portfolio_type_1.html'): span.b-filter__title Последние
@@ -29,9 +28,7 @@ block content
             a.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_5.html'): span.b-filter__title По стилям
 
         .b-portfolio
-            h5.b-portfolio__header Последние созданные баннеры
-
-
+            h1.b-portfolio__header В портфолио 985 баннеров
 
             .b-portfolio__list
                 - for (var i=0; i<12;++i)
